--- a/src/Form.css
+++ b/src/Form.css
@@ -9,7 +9,9 @@
   grid-template-columns: 1fr 1fr;
 }
 
-
+.form-spacing {
+  margin-top: 6px;
+}
 
 .form-content-left {
   background: linear-gradient(
@@ -84,12 +86,7 @@
   color: #f00e0e;
 }
 
-.form-label {
-  display: inline-block;
-  font-size: 0.8rem;
-  margin-bottom: 6px;
-  color: #fff;
-}
+
 
 .form-input {
   display: block;
@@ -146,3 +143,39 @@
   color: #27cdff;
   font-weight: 600;
 }
+
+.number {
+  position: absolute;
+  top: -10;
+  color: #27cdff;
+}
+
+.container {
+  max-width: 208px;    /*adjust it*/
+  margin: auto;
+  position: relative;
+  display: inline-block;
+}
+
+.lable {
+  background-color: #ffffff;
+  width: 80%;
+  padding: 15px;
+  
+  -moz-border-radius: 5px;
+  border-radius: 2px;
+  padding: 5px 5px;
+}
+.snehainput {
+  background-color: #ffffff;
+  border-left: 1px solid #fff8f8;
+  border-right: 0px;
+  border-top: 0px;
+  border-bottom: 0px;
+  padding: 7px 5px;
+  color: #000000;
+  outline: none;
+}
+
+
+
